@@ -1,6 +1,13 @@
 2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_list_view_header),
+	(clearlooks_gummy_draw_toolbar):
+	Organized code and tweaks in toolbar shadings
+
+2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_button):
 	Reverted old thickness behaviour
 
